--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="“Mobile Concept is a professional car audio installation service specializing in Digital Signal Processing (DSP), dedicated to enhancing your driving experience with over 30 years of expertise."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
